--- a/Biol607/project/analysis/Analysis.qmd
+++ b/Biol607/project/analysis/Analysis.qmd
@@ -298,9 +298,9 @@ ggplot(data = MAE.long, aes(x = model, y = MAE)) +
 
 logClade2_FC <- lm(log(FemurCirc) ~ log(FemurLen) , data = avesFCFL)
 
-summary(logClade2_FC.lm)
+summary(logClade2_FC)
 
-check_model(logClade2_FC.lm)
+check_model(logClade2_FC)
 
 poly2_FC<- lm(FemurCirc ~ poly(FemurLen,2) , data = avesFCFL)
 
@@ -459,7 +459,7 @@ ggplot(data = fitvals_BM.long) +
 
 ```
 
-MSE training data
+### MSE training data
 
 ```{r}
 n <- length(avesFCBM.train$BM.g)
@@ -506,7 +506,7 @@ Spline_BM1.prd <- predict(Spline_BM1, newdata = data.frame(FemurCirc = avesFCBM.
 Spline_BM2.prd <- predict(Spline_BM2, newdata = data.frame(FemurCirc = avesFCBM.test$FemurCirc))
 ```
 
-MSE from prediction set
+### MSE from prediction set
 
 ```{r}
 n <- length(avesFCBM.test$BM.g)
@@ -545,7 +545,7 @@ ggplot(data = MSE.longBM, aes(x = model, y = MSE)) +
   
 ```
 
-Cross Validation
+### Cross Validation
 
 ```{r}
 # No test dataset is necessary
@@ -618,4 +618,227 @@ AIC(lm_BM,loglog_BM,poly2_BM,poly3_BM,Spline_BM1,Spline_BM2)
 
 
 check_model(loglog_BM)
+```
+
+### Prediction Theropod - back transform
+
+```{r}
+Dinos <- read_csv('Estimated.csv')
+
+head(Dinos)
+
+colnames(Dinos)
+
+ggplot(Dinos, aes(y = log(BM.g), x = log(FemurCirc))) +
+  geom_point(aes(color = Method)) 
+
+
+
+# Predict VD - Estimated Body Mass
+
+Andersonetal1985poly <-   0.16 * Dinos$FemurCirc^2.37699
+
+
+CampbellMarcus1992 <- 10^(-0.065 + 2.411*log10(Dinos$FemurCirc))
+
+CampioneEtal2014 <- 10^(-0.683 + 2.754*log10(Dinos$FemurCirc))
+
+FieldEtal2013 <- exp(-0.11 + 2.4*log(Dinos$FemurCirc))
+
+RomeroAlarcon2023Log <-  exp(-0.09121 + 2.37699*log(Dinos$FemurCirc))
+
+RomeroAlarcon2023poly <- predict(poly2_BM,newdata = data.frame("FemurCirc" = Dinos$FemurCirc))
+
+
+modelsPredict1 <- as.data.frame(cbind(trueBM.g = Dinos$BM.g, FemurCirc = Dinos$FemurCirc, CampbellMarcus1992, FieldEtal2013, CampioneEtal2014, RomeroAlarcon2023Log, RomeroAlarcon2023poly, Andersonetal1985poly))
+
+modelsPredict.BackDinos <- modelsPredict1 |> pivot_longer(cols = c(CampbellMarcus1992, FieldEtal2013, CampioneEtal2014, RomeroAlarcon2023Log, RomeroAlarcon2023poly, Andersonetal1985poly), names_to = "Models", values_to = "predBM.g")
+
+
+ggplot(data = modelsPredict.BackDinos) +
+  geom_smooth(aes(y = predBM.g, x = FemurCirc, color = Models)) +
+  geom_point(data = Dinos,aes(y = BM.g, x = FemurCirc, shape = Method)) 
+
+
+# Percent prediction error Dinos
+
+modelsPPE <- modelsPredict.BackDinos |> group_by(Models) |> mutate(PPE = abs(as.numeric(trueBM.g) - as.numeric(predBM.g))/as.numeric(predBM.g)* 100) 
+
+meansPPE <- modelsPPE |> group_by(Models) |> summarize( MPPE = mean(PPE), sdPPE = sd(PPE))
+
+ggplot(modelsPPE) +
+  geom_boxplot(aes(x = Models, y = PPE, group = Models, color = Models))
+
+
+```
+
+```         
+```
+
+### Prediction Theropod - transform log
+
+```{r}
+
+
+# Predict VD - Estimated Body Mass transform
+
+#Andersonetal1985poly <-   0.16 * Dinos$FemurCirc^2.37699
+
+
+CampbellMarcus1992 <- -0.065 + 2.411*log10(Dinos$FemurCirc)
+
+CampioneEtal2014 <- -0.683 + 2.754*log10(Dinos$FemurCirc)
+
+FieldEtal2013 <- -0.11 + 2.4*log(Dinos$FemurCirc)
+
+RomeroAlarcon2023Log <-  -0.09121 + 2.37699*log(Dinos$FemurCirc)
+
+#RomeroAlarcon2023poly <- predict(poly2_BM,newdata = data.frame("FemurCirc" = Dinos$FemurCirc))
+
+
+modelsPredictlog <- as.data.frame(cbind(trueBM.g = log(Dinos$BM.g), FemurCirc = log(Dinos$FemurCirc), CampbellMarcus1992, CampioneEtal2014, typeLog = rep("ln", length(Dinos$FemurCirc))))
+
+modelsPredictlog10 <- as.data.frame(cbind(trueBM.g = log10(Dinos$BM.g), FemurCirc = log(Dinos$FemurCirc),  FieldEtal2013,  RomeroAlarcon2023Log, typeLog = rep("log10", length(Dinos$FemurCirc))))
+
+modelsPredictlog <- modelsPredictlog |> pivot_longer(cols = c(CampbellMarcus1992, CampioneEtal2014), names_to = "Models", values_to = "predBM.g")
+
+modelsPredictlog10 <- modelsPredictlog10 |> pivot_longer(cols = c( FieldEtal2013,  RomeroAlarcon2023Log), names_to = "Models", values_to = "predBM.g")
+
+
+modelsPredict.DinoLog <- rbind(modelsPredictlog, modelsPredictlog10)
+
+levels(as.factor(modelsPredict.DinoLog $Models))
+
+
+ggplot(data = modelsPredict.DinoLog ) +
+  geom_smooth(aes(y = as.numeric(trueBM.g), x = as.numeric(FemurCirc), color = Models), method = 'lm') +
+  geom_point(aes(y = as.numeric(trueBM.g), x = as.numeric(FemurCirc))) +
+  facet_wrap(typeLog ~ ., scales = 'free')
+
+
+
+# Percent prediction error Dinos
+
+modelsPPE <- modelsPredict.DinoLog  |> group_by(Models) |> mutate(PPE = abs(as.numeric(trueBM.g) - as.numeric(predBM.g))/as.numeric(predBM.g)* 100) 
+
+
+
+meansPPE <- modelsPPE |> group_by(Models) |> summarize( MPPE = mean(PPE), sdPPE = sd(PPE))
+
+ggplot(modelsPPE) +
+  geom_boxplot(aes(x = Models, y = PPE, group = Models, color = Models))
+
+
+```
+
+### Palaeognathae prediction - Back transform
+
+```{r}
+
+# Palaeognathae prediction
+
+palaeognathae <- newAves |> filter(Clade.1 == "Palaeognathae" & !is.na(BM.g) & !is.na(FemurCirc))
+
+
+ggplot(data = newAves) +
+  geom_point(aes(y = BM.g, x = FemurCirc, )) 
+
+# Predict VD - Estimated Body Mass
+
+Andersonetal1985poly <-   0.16 * palaeognathae$FemurCirc^2.37699
+
+CampbellMarcus1992 <- 10^(-0.065 + 2.411*log10(palaeognathae$FemurCirc))
+
+CampioneEtal2014 <- 10^(-0.683 + 2.754*log10(palaeognathae$FemurCirc))
+
+FieldEtal2013 <- exp(-0.11 + 2.4*log(palaeognathae$FemurCirc))
+
+RomeroAlarcon2023Log <-  exp(-0.09121 + 2.37699*log(palaeognathae$FemurCirc))
+
+RomeroAlarcon2023poly <- predict(poly2_BM,newdata = data.frame("FemurCirc" = palaeognathae$FemurCirc))
+
+
+modelsPredict1 <- as.data.frame(cbind(trueBM.g = palaeognathae$BM.g, FemurCirc = palaeognathae$FemurCirc, CampbellMarcus1992, FieldEtal2013, CampioneEtal2014, RomeroAlarcon2023Log, RomeroAlarcon2023poly,Andersonetal1985poly))
+
+modelsPredict.backPalae <- modelsPredict1 |> pivot_longer(cols = c(CampbellMarcus1992, FieldEtal2013, CampioneEtal2014, RomeroAlarcon2023Log, RomeroAlarcon2023poly,Andersonetal1985poly), names_to = "Models", values_to = "predBM.g")
+
+
+
+levels(as.factor(modelsPredict.backPalae$Models))
+
+
+ggplot(data = modelsPredict.backPalae) +
+  geom_smooth(aes(y = predBM.g, x = FemurCirc, color = Models)) +
+  geom_point(data = palaeognathae,aes(y = BM.g, x = FemurCirc)) 
+
+
+# Percent prediction error Dinos
+
+modelsPPE <- modelsPredict.backPalae  |> group_by(Models) |> mutate(PPE = abs(as.numeric(trueBM.g) - as.numeric(predBM.g))/as.numeric(predBM.g)* 100) 
+
+
+
+meansPPE <- modelsPPE |> group_by(Models) |> summarize( MPPE = mean(PPE), sdPPE = sd(PPE))
+
+ggplot(modelsPPE) +
+  geom_boxplot(aes(x = Models, y = PPE, group = Models, color = Models))
+
+```
+
+### Palaeognathae - No back transform
+
+```{r}
+
+
+# Predict VD - Estimated Body Mass no transform
+
+#Andersonetal1985poly <-   0.16 * Dinos$FemurCirc^2.37699
+
+
+CampbellMarcus1992 <- -0.065 + 2.411*log10(palaeognathae$FemurCirc)
+
+CampioneEtal2014 <- -0.683 + 2.754*log10(palaeognathae$FemurCirc)
+
+FieldEtal2013 <- -0.11 + 2.4*log(palaeognathae$FemurCirc)
+
+RomeroAlarcon2023Log <-  -0.09121 + 2.37699*log(palaeognathae$FemurCirc)
+
+#RomeroAlarcon2023poly <- predict(poly2_BM,newdata = data.frame("FemurCirc" = Dinos$FemurCirc))
+
+
+modelsPredictlog <- as.data.frame(cbind(trueBM.g = log(palaeognathae$BM.g), FemurCirc = log(palaeognathae$FemurCirc), CampbellMarcus1992, CampioneEtal2014, typeLog = rep("ln", length(palaeognathae$FemurCirc))))
+
+modelsPredictlog10 <- as.data.frame(cbind(trueBM.g = log10(palaeognathae$BM.g), FemurCirc = log(palaeognathae$FemurCirc),  FieldEtal2013,  RomeroAlarcon2023Log, typeLog = rep("log10", length(palaeognathae$FemurCirc))))
+
+
+
+modelsPredictlog <- modelsPredictlog |> pivot_longer(cols = c(CampbellMarcus1992, CampioneEtal2014), names_to = "Models", values_to = "predBM.g")
+
+modelsPredictlog10 <- modelsPredictlog10 |> pivot_longer(cols = c( FieldEtal2013,  RomeroAlarcon2023Log), names_to = "Models", values_to = "predBM.g")
+
+
+modelsPredict.logPalae <- rbind(modelsPredictlog, modelsPredictlog10)
+
+
+levels(as.factor(modelsPredict.logPalae $Models))
+
+
+ggplot(data = modelsPredict.DinoLog ) +
+  geom_smooth(aes(y = as.numeric(trueBM.g), x = as.numeric(FemurCirc), color = Models), method = 'lm') +
+  geom_point(aes(y = as.numeric(trueBM.g), x = as.numeric(FemurCirc))) +
+  facet_wrap(typeLog ~ ., scales = 'free')
+
+
+# Percent prediction error Palae
+
+modelsPPE <- modelsPredict.logPalae  |> group_by(Models) |> mutate(PPE = abs(as.numeric(trueBM.g) - as.numeric(predBM.g))/as.numeric(predBM.g)* 100) 
+
+
+
+meansPPE <- modelsPPE |> group_by(Models) |> summarize( MPPE = mean(PPE), sdPPE = sd(PPE))
+
+meansPPE
+
+ggplot(modelsPPE) +
+  geom_boxplot(aes(x = Models, y = PPE, group = Models, color = Models))
 ```
