--- a/Biol607/project/analysis/Analysis.qmd
+++ b/Biol607/project/analysis/Analysis.qmd
@@ -104,7 +104,9 @@ poly2Clade1_FC <- lm(FemurCirc ~ poly(FemurLen,2) + Clade.1 , data = avesFCFL.tr
 # Multiple Poly model Clade 2
 poly2Clade2_FC <- lm(FemurCirc ~ poly(FemurLen,2) + Clade.2, data = avesFCFL.train)
 
+cbind(AIC(lm_FC, lmClade1_FC, lmClade2_FC, loglog_FC,logClade1_FC, logClade2_FC, poly2_FC, poly2Clade1_FC,poly2Clade2_FC ), adjR2 = c(0.9243, 0.9243, 0.96,0.9685, 0.9701, 0.9849, 0.9712, 0.9712,0.9794 ) )
 
+summary(poly2Clade2_FC)
 
 # Fit values
 
@@ -204,6 +206,8 @@ MSE.test <- data.frame(type = 'test', lm_FC = lm_FC.MSE.test,
 
 
 MSE <- rbind(MSE.train, MSE.test)
+
+MSE 
 
 MSE.long <- MSE %>% pivot_longer(-type, names_to = 'model', values_to = 'MSE')
 
@@ -398,7 +402,6 @@ ggplot(newAves) +
 # Femur Length distribution
 ggplot(newAves) +
       geom_histogram(aes( x=BM.g, fill= Clade.1))
-
 
 
 
@@ -616,6 +619,7 @@ Spline_BM2 <- lm(BM.g ~ bs(FemurCirc, knots = c(35, 50)), data = newAves)
 
 AIC(lm_BM,loglog_BM,poly2_BM,poly3_BM,Spline_BM1,Spline_BM2)
 
+summary(Spline_BM2)
 
 
 check_model(loglog_BM)
@@ -634,6 +638,7 @@ ggplot(Dinos, aes(y = log(BM.g), x = log(FemurCirc))) +
   geom_point(aes(color = Method)) 
 
 
+as.factor(Dinos$Clade.2)
 
 # Predict VD - Estimated Body Mass
 
@@ -666,6 +671,7 @@ ggplot(data = modelsPredict.BackDinos) +
 modelsPPE <- modelsPredict.BackDinos |> group_by(Models) |> mutate(PPE = abs(as.numeric(trueBM.g) - as.numeric(predBM.g))/as.numeric(predBM.g)* 100) 
 
 meansPPE <- modelsPPE |> group_by(Models) |> summarize( MPPE = mean(PPE), sdPPE = sd(PPE))
+meansPPE 
 
 ggplot(modelsPPE) +
   geom_boxplot(aes(x = Models, y = PPE, group = Models, color = Models))
@@ -696,14 +702,14 @@ RomeroAlarcon2023Log <-  -0.09121 + 2.37699*log(Dinos$FemurCirc)
 
 #RomeroAlarcon2023poly <- predict(poly2_BM,newdata = data.frame("FemurCirc" = Dinos$FemurCirc))
 
+nrow(Dinos)
+modelsPredictlog10 <- as.data.frame(cbind(trueBM.g = log10(Dinos$BM.g), FemurCirc = log10(Dinos$FemurCirc), CampbellMarcus1992, CampioneEtal2014, typeLog = rep("log10", length(Dinos$FemurCirc))))
 
-modelsPredictlog <- as.data.frame(cbind(trueBM.g = log(Dinos$BM.g), FemurCirc = log(Dinos$FemurCirc), CampbellMarcus1992, CampioneEtal2014, typeLog = rep("ln", length(Dinos$FemurCirc))))
+modelsPredictlog <- as.data.frame(cbind(trueBM.g = log(Dinos$BM.g), FemurCirc = log(Dinos$FemurCirc),  FieldEtal2013,  RomeroAlarcon2023Log, typeLog = rep("log", length(Dinos$FemurCirc))))
 
-modelsPredictlog10 <- as.data.frame(cbind(trueBM.g = log10(Dinos$BM.g), FemurCirc = log(Dinos$FemurCirc),  FieldEtal2013,  RomeroAlarcon2023Log, typeLog = rep("log10", length(Dinos$FemurCirc))))
+modelsPredictlog10 <- modelsPredictlog10 |> pivot_longer(cols = c(CampbellMarcus1992, CampioneEtal2014), names_to = "Models", values_to = "predBM.g")
 
-modelsPredictlog <- modelsPredictlog |> pivot_longer(cols = c(CampbellMarcus1992, CampioneEtal2014), names_to = "Models", values_to = "predBM.g")
-
-modelsPredictlog10 <- modelsPredictlog10 |> pivot_longer(cols = c( FieldEtal2013,  RomeroAlarcon2023Log), names_to = "Models", values_to = "predBM.g")
+modelsPredictlog <- modelsPredictlog |> pivot_longer(cols = c( FieldEtal2013,  RomeroAlarcon2023Log), names_to = "Models", values_to = "predBM.g")
 
 
 modelsPredict.DinoLog <- rbind(modelsPredictlog, modelsPredictlog10)
@@ -725,7 +731,7 @@ modelsPPE <- modelsPredict.DinoLog  |> group_by(Models) |> mutate(PPE = abs(as.n
 
 
 meansPPE <- modelsPPE |> group_by(Models) |> summarize( MPPE = mean(PPE), sdPPE = sd(PPE))
-
+meansPPE 
 ggplot(modelsPPE) +
   geom_boxplot(aes(x = Models, y = PPE, group = Models, color = Models))
 
@@ -740,6 +746,7 @@ ggplot(modelsPPE) +
 
 palaeognathae <- newAves |> filter(Clade.1 == "Palaeognathae" & !is.na(BM.g) & !is.na(FemurCirc))
 
+as.factor(palaeognathae$Clade.2)
 
 ggplot(data = newAves) +
   geom_point(aes(y = BM.g, x = FemurCirc, )) 
@@ -781,6 +788,8 @@ modelsPPE <- modelsPredict.backPalae  |> group_by(Models) |> mutate(PPE = abs(as
 
 meansPPE <- modelsPPE |> group_by(Models) |> summarize( MPPE = mean(PPE), sdPPE = sd(PPE))
 
+meansPPE
+
 ggplot(modelsPPE) +
   geom_boxplot(aes(x = Models, y = PPE, group = Models, color = Models))
 
@@ -807,15 +816,15 @@ RomeroAlarcon2023Log <-  -0.09121 + 2.37699*log(palaeognathae$FemurCirc)
 #RomeroAlarcon2023poly <- predict(poly2_BM,newdata = data.frame("FemurCirc" = Dinos$FemurCirc))
 
 
-modelsPredictlog <- as.data.frame(cbind(trueBM.g = log(palaeognathae$BM.g), FemurCirc = log(palaeognathae$FemurCirc), CampbellMarcus1992, CampioneEtal2014, typeLog = rep("ln", length(palaeognathae$FemurCirc))))
+modelsPredictlog10 <- as.data.frame(cbind(trueBM.g = log10(palaeognathae$BM.g), FemurCirc = log10(palaeognathae$FemurCirc), CampbellMarcus1992, CampioneEtal2014, typeLog = rep("log10", length(palaeognathae$FemurCirc))))
 
-modelsPredictlog10 <- as.data.frame(cbind(trueBM.g = log10(palaeognathae$BM.g), FemurCirc = log(palaeognathae$FemurCirc),  FieldEtal2013,  RomeroAlarcon2023Log, typeLog = rep("log10", length(palaeognathae$FemurCirc))))
+modelsPredictlog <- as.data.frame(cbind(trueBM.g = log(palaeognathae$BM.g), FemurCirc = log(palaeognathae$FemurCirc),  FieldEtal2013,  RomeroAlarcon2023Log, typeLog = rep("log", length(palaeognathae$FemurCirc))))
 
 
 
-modelsPredictlog <- modelsPredictlog |> pivot_longer(cols = c(CampbellMarcus1992, CampioneEtal2014), names_to = "Models", values_to = "predBM.g")
+modelsPredictlog10 <- modelsPredictlog10 |> pivot_longer(cols = c(CampbellMarcus1992, CampioneEtal2014), names_to = "Models", values_to = "predBM.g")
 
-modelsPredictlog10 <- modelsPredictlog10 |> pivot_longer(cols = c( FieldEtal2013,  RomeroAlarcon2023Log), names_to = "Models", values_to = "predBM.g")
+modelsPredictlog <- modelsPredictlog |> pivot_longer(cols = c( FieldEtal2013,  RomeroAlarcon2023Log), names_to = "Models", values_to = "predBM.g")
 
 
 modelsPredict.logPalae <- rbind(modelsPredictlog, modelsPredictlog10)
@@ -824,7 +833,7 @@ modelsPredict.logPalae <- rbind(modelsPredictlog, modelsPredictlog10)
 levels(as.factor(modelsPredict.logPalae $Models))
 
 
-ggplot(data = modelsPredict.DinoLog ) +
+ggplot(data = modelsPredict.logPalae ) +
   geom_smooth(aes(y = as.numeric(trueBM.g), x = as.numeric(FemurCirc), color = Models), method = 'lm') +
   geom_point(aes(y = as.numeric(trueBM.g), x = as.numeric(FemurCirc))) +
   facet_wrap(typeLog ~ ., scales = 'free')
